# terminal_qrcode

./: Cargo.toml  README.md
src/: lib.rs  main.rs
